@@ -4,6 +4,7 @@
 
 - improved HTTP cache
 - fixed parsing of schema keys in `PATCH` method
+- fixed predefined session functionality (a problem with cache)
 
 ========================
 0.0.35
